@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4Circle.icc,v 1.1 1999-01-07 16:09:09 gunter Exp $
+// $Id: G4Circle.icc,v 1.2 1999-06-05 15:13:11 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
