@@ -1,4 +1,4 @@
-$Id: History,v 1.7 1999-06-01 14:36:24 johna Exp $
+$Id: History,v 1.8 1999-06-05 15:13:05 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+greps-01-00-08  5th June John Allison
+- Added virtual operator = and overrides to G4Circle and G4Square.
 
 greps-01-00-07  25th May 1999  John Allison
 - Moved operator != to member function.
